--- a/TEMA CSS PARTEA 5/exercitiul3/grid.1.html
+++ b/TEMA CSS PARTEA 5/exercitiul3/grid.1.html
@@ -7,10 +7,7 @@
 <body>
 
 <div class="grid-container">
-  <div class="item1">
-    a
-    <br>
-  </div>
+  <div class="item1">a</div>
   <div class="item2">b</div>
   <div class="item3">c</div>  
   <div class="item4">d</div>
